--- a/products.html
+++ b/products.html
@@ -1,203 +1,286 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore RePaws' sustainable and all-natural enzyme-powered pet care products. From shampoos to sprays, crafted with love for pets and planet."
+    />
+    <meta
+      name="keywords"
+      content="RePaws, sustainable pet care, enzyme pet products, eco-friendly pet hygiene, natural pet shampoo, dog spray, pet soap"
+    />
+    <meta name="author" content="RePaws" />
+    <title>RePaws | All Products - Sustainable Pet Care</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logo.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="shared.css" />
+    <link rel="stylesheet" href="products.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="products.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore RePaws' sustainable and all-natural enzyme-powered pet care products. From shampoos to sprays, crafted with love for pets and planet.">
-  <meta name="keywords" content="RePaws, sustainable pet care, enzyme pet products, eco-friendly pet hygiene, natural pet shampoo, dog spray, pet soap">
-  <meta name="author" content="RePaws">
-  <title>RePaws | All Products - Sustainable Pet Care</title>
-  <link rel="stylesheet" href="shared.css">
-  <link rel="stylesheet" href="products.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <script src="script.js"></script>
-  <script src="products.js"></script>
-</head>
-
-<body>
+  <body>
     <nav>
-        <div class="nav-left"><a href="/products">Our Products</a></div>
-        <div class="nav-center"><a href="/">RePaws</a></div>
-        <div class="nav-right"><a href="/about-us">About Us</a></div>
+      <div class="nav-left"><a href="/products">Our Products</a></div>
+      <div class="nav-center"><a href="/">RePaws</a></div>
+      <div class="nav-right"><a href="/about-us">About Us</a></div>
     </nav>
 
     <section class="product-page">
-        <div class="section-head-box">
-          <h2>All RePaws Products</h2>
-        </div>
+      <div class="section-head-box">
+        <h2>All RePaws Products</h2>
+      </div>
 
-        <div class="product-layout">
-          <aside class="product-filters">
-            <div class="filter-box">
-              <h4>Price Range</h4>
-              <ul>
-                <li><input type="checkbox" id="all" checked><label for="all">All</label></li>
-                <li><input type="checkbox" id="p1"><label for="p1">Under $10</label></li>
-                <li><input type="checkbox" id="p2"><label for="p2">$10 - $20</label></li>
-                <li><input type="checkbox" id="p3"><label for="p3">$20 - $50</label></li>
-                <li><input type="checkbox" id="p4"><label for="p4">$50 - $100</label></li>
-                <li><input type="checkbox" id="p5"><label for="p5">Over $100</label></li>
-              </ul>
+      <div class="product-layout">
+        <aside class="product-filters">
+          <div class="filter-box">
+            <h4>Price Range</h4>
+            <ul>
+              <li>
+                <input type="checkbox" id="all" checked /><label for="all"
+                  >All</label
+                >
+              </li>
+              <li>
+                <input type="checkbox" id="p1" /><label for="p1"
+                  >Under $10</label
+                >
+              </li>
+              <li>
+                <input type="checkbox" id="p2" /><label for="p2"
+                  >$10 - $20</label
+                >
+              </li>
+              <li>
+                <input type="checkbox" id="p3" /><label for="p3"
+                  >$20 - $50</label
+                >
+              </li>
+              <li>
+                <input type="checkbox" id="p4" /><label for="p4"
+                  >$50 - $100</label
+                >
+              </li>
+              <li>
+                <input type="checkbox" id="p5" /><label for="p5"
+                  >Over $100</label
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="filter-box">
+            <h4>Category</h4>
+            <ul>
+              <li>
+                <input type="checkbox" id="cat1" /><label for="cat1"
+                  >Shampoo</label
+                >
+              </li>
+              <li>
+                <input type="checkbox" id="cat2" /><label for="cat2"
+                  >Spray</label
+                >
+              </li>
+              <li>
+                <input type="checkbox" id="cat3" /><label for="cat3"
+                  >Soap</label
+                >
+              </li>
+            </ul>
+          </div>
+        </aside>
+
+        <div class="product-grid" id="productGrid">
+          <div class="product-card page-1">
+            <div class="product-image">
+              <a href="/product/1"
+                ><img src="img/product1.svg" alt="RePaws Product 1"
+              /></a>
+              <span class="discount">-27%</span>
             </div>
-
-            <div class="filter-box">
-              <h4>Category</h4>
-              <ul>
-                <li><input type="checkbox" id="cat1"><label for="cat1">Shampoo</label></li>
-                <li><input type="checkbox" id="cat2"><label for="cat2">Spray</label></li>
-                <li><input type="checkbox" id="cat3"><label for="cat3">Soap</label></li>
-              </ul>
+            <div class="product-info">
+              <h4>Natural Pet Shampoo</h4>
+              <p class="price">$8.60 <span class="old-price">$11.79</span></p>
             </div>
-          </aside>
-
-          <div class="product-grid" id="productGrid">
-            <div class="product-card page-1">
-              <div class="product-image">
-                <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 1"></a>
-                <span class="discount">-27%</span>
-              </div>
-              <div class="product-info">
-                <h4>Natural Pet Shampoo</h4>
-                <p class="price">$8.60 <span class="old-price">$11.79</span></p>
-              </div>
-              <div class="product-hover">
-                <div class="hover-buttons">
-                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                  <button class="icon-button"><i class="fa fa-heart"></i></button>
-                  <button class="buy-now">BUY NOW</button>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card page-1">
-              <div class="product-image">
-                <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 2"></a>
-                <span class="discount">-16%</span>
-              </div>
-              <div class="product-info">
-                <h4>Soothing Enzyme Spray</h4>
-                <p class="price">$7.40 <span class="old-price">$8.80</span></p>
-              </div>
-              <div class="product-hover">
-                <div class="hover-buttons">
-                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                  <button class="icon-button"><i class="fa fa-heart"></i></button>
-                  <button class="buy-now">BUY NOW</button>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card page-1">
-              <div class="product-image">
-                <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 3"></a>
-                <span class="discount">-27%</span>
-              </div>
-              <div class="product-info">
-                <h4>Fermented Soap Bar</h4>
-                <p class="price">$3.80 <span class="old-price">$5.15</span></p>
-              </div>
-              <div class="product-hover">
-                <div class="hover-buttons">
-                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                  <button class="icon-button"><i class="fa fa-heart"></i></button>
-                  <button class="buy-now">BUY NOW</button>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card page-2" style="display: none;">
-              <div class="product-image">
-                <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 4"></a>
-                <span class="discount">-26%</span>
-              </div>
-              <div class="product-info">
-                <h4>Gentle Paw Balm</h4>
-                <p class="price">$5.80 <span class="old-price">$7.80</span></p>
-              </div>
-              <div class="product-hover">
-                <div class="hover-buttons">
-                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                  <button class="icon-button"><i class="fa fa-heart"></i></button>
-                  <button class="buy-now">BUY NOW</button>
-                </div>
+            <div class="product-hover">
+              <div class="hover-buttons">
+                <button class="icon-button">
+                  <i class="fa fa-shopping-cart"></i>
+                </button>
+                <button class="icon-button"><i class="fa fa-heart"></i></button>
+                <button class="buy-now">BUY NOW</button>
               </div>
             </div>
+          </div>
 
-            <div class="product-card page-2" style="display: none;">
-              <div class="product-image">
-                <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 5"></a>
-                <span class="discount">-25%</span>
-              </div>
-              <div class="product-info">
-                <h4>Deodorizing Fur Mist</h4>
-                <p class="price">$4.80 <span class="old-price">$6.40</span></p>
-              </div>
-              <div class="product-hover">
-                <div class="hover-buttons">
-                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                  <button class="icon-button"><i class="fa fa-heart"></i></button>
-                  <button class="buy-now">BUY NOW</button>
-                </div>
+          <div class="product-card page-1">
+            <div class="product-image">
+              <a href="/product/1"
+                ><img src="img/product1.svg" alt="RePaws Product 2"
+              /></a>
+              <span class="discount">-16%</span>
+            </div>
+            <div class="product-info">
+              <h4>Soothing Enzyme Spray</h4>
+              <p class="price">$7.40 <span class="old-price">$8.80</span></p>
+            </div>
+            <div class="product-hover">
+              <div class="hover-buttons">
+                <button class="icon-button">
+                  <i class="fa fa-shopping-cart"></i>
+                </button>
+                <button class="icon-button"><i class="fa fa-heart"></i></button>
+                <button class="buy-now">BUY NOW</button>
               </div>
             </div>
+          </div>
 
-            <div class="product-card page-2" style="display: none;">
-              <div class="product-image">
-                <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 6"></a>
-                <span class="discount">-25%</span>
+          <div class="product-card page-1">
+            <div class="product-image">
+              <a href="/product/1"
+                ><img src="img/product1.svg" alt="RePaws Product 3"
+              /></a>
+              <span class="discount">-27%</span>
+            </div>
+            <div class="product-info">
+              <h4>Fermented Soap Bar</h4>
+              <p class="price">$3.80 <span class="old-price">$5.15</span></p>
+            </div>
+            <div class="product-hover">
+              <div class="hover-buttons">
+                <button class="icon-button">
+                  <i class="fa fa-shopping-cart"></i>
+                </button>
+                <button class="icon-button"><i class="fa fa-heart"></i></button>
+                <button class="buy-now">BUY NOW</button>
               </div>
-              <div class="product-info">
-                <h4>Ear Cleaning Solution</h4>
-                <p class="price">$5.40 <span class="old-price">$7.20</span></p>
+            </div>
+          </div>
+
+          <div class="product-card page-2" style="display: none">
+            <div class="product-image">
+              <a href="/product/1"
+                ><img src="img/product1.svg" alt="RePaws Product 4"
+              /></a>
+              <span class="discount">-26%</span>
+            </div>
+            <div class="product-info">
+              <h4>Gentle Paw Balm</h4>
+              <p class="price">$5.80 <span class="old-price">$7.80</span></p>
+            </div>
+            <div class="product-hover">
+              <div class="hover-buttons">
+                <button class="icon-button">
+                  <i class="fa fa-shopping-cart"></i>
+                </button>
+                <button class="icon-button"><i class="fa fa-heart"></i></button>
+                <button class="buy-now">BUY NOW</button>
               </div>
-              <div class="product-hover">
-                <div class="hover-buttons">
-                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                  <button class="icon-button"><i class="fa fa-heart"></i></button>
-                  <button class="buy-now">BUY NOW</button>
-                </div>
+            </div>
+          </div>
+
+          <div class="product-card page-2" style="display: none">
+            <div class="product-image">
+              <a href="/product/1"
+                ><img src="img/product1.svg" alt="RePaws Product 5"
+              /></a>
+              <span class="discount">-25%</span>
+            </div>
+            <div class="product-info">
+              <h4>Deodorizing Fur Mist</h4>
+              <p class="price">$4.80 <span class="old-price">$6.40</span></p>
+            </div>
+            <div class="product-hover">
+              <div class="hover-buttons">
+                <button class="icon-button">
+                  <i class="fa fa-shopping-cart"></i>
+                </button>
+                <button class="icon-button"><i class="fa fa-heart"></i></button>
+                <button class="buy-now">BUY NOW</button>
               </div>
+            </div>
+          </div>
+
+          <div class="product-card page-2" style="display: none">
+            <div class="product-image">
+              <a href="/product/1"
+                ><img src="img/product1.svg" alt="RePaws Product 6"
+              /></a>
+              <span class="discount">-25%</span>
+            </div>
+            <div class="product-info">
+              <h4>Ear Cleaning Solution</h4>
+              <p class="price">$5.40 <span class="old-price">$7.20</span></p>
+            </div>
+            <div class="product-hover">
+              <div class="hover-buttons">
+                <button class="icon-button">
+                  <i class="fa fa-shopping-cart"></i>
+                </button>
+                <button class="icon-button"><i class="fa fa-heart"></i></button>
+                <button class="buy-now">BUY NOW</button>
               </div>
+            </div>
           </div>
         </div>
+      </div>
 
-        <div class="pagination">
-          <a href="#" class="page active" onclick="changePage(1)">1</a>
-          <a href="#" class="page" onclick="changePage(2)">2</a>
-        </div>
-      </section>
+      <div class="pagination">
+        <a href="#" class="page active" onclick="changePage(1)">1</a>
+        <a href="#" class="page" onclick="changePage(2)">2</a>
+      </div>
+    </section>
 
     <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-left">
-                <h3>Stay in the Loop</h3>
-                <p>Subscribe to our newsletter for updates, pet care tips, and green living insights.</p>
-                <form class="subscribe-form">
-                    <input type="email" placeholder="Enter your email" required>
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
-            <div class="footer-right">
-                <h3>Contact Us</h3>
-                <div class="contacts">
-                    <p><i class="fa fa-envelope"></i><a href="mailto:hello@repaws.com">hello@repaws.com</a></p>
-                    <p><i class="fa fa-phone"></i><a href="tel:+00123456789">(+00) 123 456 789</a></p>
-                </div>
-                <h3>Follow us:</h3>
-                <ul class="social-links">
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-                </ul>
-            </div>
+      <div class="footer-content">
+        <div class="footer-left">
+          <h3>Stay in the Loop</h3>
+          <p>
+            Subscribe to our newsletter for updates, pet care tips, and green
+            living insights.
+          </p>
+          <form class="subscribe-form">
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe</button>
+          </form>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 RePaws. All rights reserved.</p>
+        <div class="footer-right">
+          <h3>Contact Us</h3>
+          <div class="contacts">
+            <p>
+              <i class="fa fa-envelope"></i
+              ><a href="mailto:hello@repaws.com">hello@repaws.com</a>
+            </p>
+            <p>
+              <i class="fa fa-phone"></i
+              ><a href="tel:+00123456789">(+00) 123 456 789</a>
+            </p>
+          </div>
+          <h3>Follow us:</h3>
+          <ul class="social-links">
+            <li>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-facebook-square"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 RePaws. All rights reserved.</p>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
